<resources>
    <string name="app_name">final-project-bejo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_service">Choose Service</string>
    <string name="ironing">IRONING</string>
    <string name="wash_iron"><![CDATA[WASH & IRON]]></string>
    <string name="dry_cleaning">DRY CLEANING</string>
    <string name="recommended">RECOMMENDED</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_message">Message</string>
</resources>