<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Bejo"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/desk_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-5dp"
            android:fontFamily="sans-serif-black"
            android:text="Laundry Service"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/choose_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desk_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="@string/choose_service"
            android:textColor="@color/grey_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/area_choose_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choose_services"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_choose_services"
                    android:padding="10dp"
                    android:src="@drawable/iron"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_1"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ironing"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_choose_services"
                    android:padding="10dp"
                    android:src="@drawable/washing_machine"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_2"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/wash_iron"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/image_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_choose_services"
                    android:padding="10dp"
                    android:src="@drawable/dry_cleaning"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_3"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/dry_cleaning"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/area_choose_service"
            android:background="@drawable/bg_half_rounded2">

            <TextView
                android:id="@+id/recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/recommended"
                android:textColor="@color/grey_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recommended"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>